# stanza-lang-uk

./: .gitignore  README.md  setup.cfg
src/: bsf_to_beios.py
src/bsf_beios/: bsf_to_beios.py
test/: test_bsf_2_beios.py  test_bsf_2_iob.py
