[metadata]
name = bsf-beios
version = 1.0.0
author = Andrew Garkavyi
author_email = andrew.gawy@gmail.com
description = NER data converter from Brat Standoff Format to BEIOS or IOB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gawy/stanza-lang-uk

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = src/bsf_beios/bsf_to_beios.py
install_requires =
    tqdm

[options.packages.find]
where = src
